dts: rza2mevb: add i2c and spi aliases
Aliases are only supposed to be in specific board device trees, not the
.dtsi file.

--- a/arch/arm/boot/dts/r7s9210-rza2mevb.dts
+++ b/arch/arm/boot/dts/r7s9210-rza2mevb.dts
@@ -54,6 +54,15 @@
 		serial1 = &scif2;
 #endif
 #endif
+
+		/* These force channels to show up as specific device numbers */
+		i2c0 = &i2c0;
+		i2c1 = &i2c1;
+		i2c2 = &i2c2;
+		i2c3 = &i2c3;
+		spi0 = &spi0;
+		spi1 = &spi1;
+		spi2 = &spi2;
 	};
 
 	chosen {
