dts: rskrza1: Change IRQ pin driver for touchscreen
Now that there is a proper IRQ pin driver, we can use that for the
LCD touchscreen controller.

--- a/arch/arm/boot/dts/r7s72100-rskrza1.dts
+++ b/arch/arm/boot/dts/r7s72100-rskrza1.dts
@@ -322,7 +322,8 @@
 
 		pinctrl-names = "default";
 		pinctrl-0 = <&irq1_pins>;
-		interrupts = <GIC_SPI (33-32) IRQ_TYPE_LEVEL_LOW>; /* IRQ1 */
+		interrupt-parent = <&irqc>;
+		interrupts = <1 IRQ_TYPE_LEVEL_LOW>;	/* IRQ1 */
 
 		touchscreen-size-x = <800>;
 		touchscreen-size-y = <480>;
