dts: rza2mevb: Change IRQ pin driver for touchscreen
Now that there is a proper IRQ pin driver, we can use that for the
LCD touchscreen controller.

--- a/arch/arm/boot/dts/r7s9210-rza2mevb.dts
+++ b/arch/arm/boot/dts/r7s9210-rza2mevb.dts
@@ -483,7 +483,8 @@
 
 		pinctrl-names = "default";
 		pinctrl-0 = <&irq3_pins>;
-		interrupts = <GIC_SPI (39-32) IRQ_TYPE_LEVEL_LOW>; /* IRQ3 */
+		interrupt-parent = <&irqc>;
+		interrupts = <3 IRQ_TYPE_LEVEL_LOW>;	/* IRQ3 */
 
 		touchscreen-size-x = <800>;
 		touchscreen-size-y = <480>;
