--- a/sound/soc/sh/Makefile
+++ b/sound/soc/sh/Makefile
@@ -22,3 +22,7 @@ snd-soc-migor-objs		:= migor.o
 
 obj-$(CONFIG_SND_SH7760_AC97)	+= snd-soc-sh7760-ac97.o
 obj-$(CONFIG_SND_SIU_MIGOR)	+= snd-soc-migor.o
+
+# RZ/A
+snd-soc-rza-ssi-objs		:= rza-ssi.o
+obj-$(CONFIG_SND_SOC_RZA_SSI)	+= snd-soc-rza-ssi.o
