--- a/arch/arm/boot/dts/r7s9210.dtsi
+++ b/arch/arm/boot/dts/r7s9210.dtsi
@@ -9,9 +9,6 @@
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/clock/r7s9210-cpg-mssr.h>
 
-#define RZADMA_SLAVE_RSPI0_TX 1
-#define RZADMA_SLAVE_RSPI0_RX 2
-
 / {
 	compatible = "renesas,r7s9210";
 	interrupt-parent = <&gic>;
@@ -507,8 +504,7 @@
 		/**** non-upstream drivers ****/
 
 		/* DMA (secure) */
-#if 0
-		dma0s: dma-controller@e8220000 {
+		dma0: dma-controller@e8220000 {
 			compatible = "renesas,rza-dma";
 			reg = <0xe8220000 0x720>,
 			      <0xfcfe1000 0x20>;
@@ -536,39 +532,6 @@
 					  "error";
 			dma-channels = <16>;
 			#dma-cells = <1>;
-			status = "disabled";
-		};
-#endif
-
-		/* DMA (non-secure) */
-		dma0: dma-controller@e8226000 {
-			compatible = "renesas,rza-dma";
-			reg = <0xe8226000 0x720>,
-			      <0xfcfe1000 0x20>;
-			interrupts = <GIC_SPI 302 IRQ_TYPE_EDGE_RISING>,
-				     <GIC_SPI 303 IRQ_TYPE_EDGE_RISING>,
-				     <GIC_SPI 304 IRQ_TYPE_EDGE_RISING>,
-				     <GIC_SPI 305 IRQ_TYPE_EDGE_RISING>,
-				     <GIC_SPI 306 IRQ_TYPE_EDGE_RISING>,
-				     <GIC_SPI 307 IRQ_TYPE_EDGE_RISING>,
-				     <GIC_SPI 308 IRQ_TYPE_EDGE_RISING>,
-				     <GIC_SPI 309 IRQ_TYPE_EDGE_RISING>,
-				     <GIC_SPI 310 IRQ_TYPE_EDGE_RISING>,
-				     <GIC_SPI 311 IRQ_TYPE_EDGE_RISING>,
-				     <GIC_SPI 358 IRQ_TYPE_EDGE_RISING>,
-				     <GIC_SPI 359 IRQ_TYPE_EDGE_RISING>,
-				     <GIC_SPI 360 IRQ_TYPE_EDGE_RISING>,
-				     <GIC_SPI 361 IRQ_TYPE_EDGE_RISING>,
-				     <GIC_SPI 362 IRQ_TYPE_EDGE_RISING>,
-				     <GIC_SPI 363 IRQ_TYPE_EDGE_RISING>,
-				     <GIC_SPI 30 IRQ_TYPE_EDGE_RISING>;	/* DMAERR1 */
-			interrupt-names = "ch0", "ch1", "ch2", "ch3",
-					  "ch4", "ch5", "ch6", "ch7",
-					  "ch8", "ch9", "ch10", "ch11",
-					  "ch12", "ch13", "ch14", "ch15",
-					  "error";
-			dma-channels = <16>;
-			#dma-cells = <1>;
 		};
 
 		vdc6: display@fcff7400 {
@@ -583,6 +546,61 @@
 			power-domains = <&cpg>;
 
 			status = "disabled";
+		};
+
+		ssi0: ssi@e8048000 {
+			#sound-dai-cells = <0>;
+			compatible = "renesas,rza2-ssi";
+			reg = <0xe8048000 0x00000028>;
+			interrupts = <GIC_SPI (252-32) IRQ_TYPE_LEVEL_HIGH>,
+				     <GIC_SPI (253-32) IRQ_TYPE_EDGE_RISING>,
+				     <GIC_SPI (254-32) IRQ_TYPE_EDGE_RISING>;
+			interrupt-names = "int", "tx", "rx";
+			clocks = <&cpg CPG_MOD 73>;
+			power-domains = <&cpg>;
+			status = "disabled";
+			audio_clk = <0>;	/* Assign in DTS */
+		};
+
+		ssi1: ssi@e8048800 {
+			#sound-dai-cells = <0>;
+			compatible = "renesas,rza2-ssi";
+			reg = <0xe8048800 0x00000028>;
+			interrupts = <GIC_SPI (255-32) IRQ_TYPE_LEVEL_HIGH>,
+				     <GIC_SPI (256-32) IRQ_TYPE_EDGE_RISING>,
+				     <GIC_SPI (257-32) IRQ_TYPE_EDGE_RISING>;
+			interrupt-names = "int", "tx", "rx";
+			clocks = <&cpg CPG_MOD 72>;
+			power-domains = <&cpg>;
+			status = "disabled";
+			audio_clk = <0>;	/* Assign in DTS */
+		};
+
+		ssi2: ssi@e8049000 {
+			#sound-dai-cells = <0>;
+			compatible = "renesas,rza2-ssi";
+			reg = <0xe8049000 0x00000028>;
+			interrupts = <GIC_SPI (258-32) IRQ_TYPE_LEVEL_HIGH>,
+				     <GIC_SPI (259-32) IRQ_TYPE_EDGE_RISING>,
+				     <GIC_SPI (259-32) IRQ_TYPE_EDGE_RISING>;
+			interrupt-names = "int", "tx", "rx";
+			clocks = <&cpg CPG_MOD 71>;
+			power-domains = <&cpg>;
+			status = "disabled";
+			audio_clk = <0>;	/* Assign in DTS */
+		};
+		ssi3: ssi@e8049800 {
+			#sound-dai-cells = <0>;
+			compatible = "renesas,rza2-ssi";
+			reg = <0xe8049800 0x00000028>;
+			interrupts = <GIC_SPI (260-32) IRQ_TYPE_LEVEL_HIGH>,
+				     <GIC_SPI (261-32) IRQ_TYPE_EDGE_RISING>,
+				     <GIC_SPI (262-32) IRQ_TYPE_EDGE_RISING>;
+			interrupt-names = "int", "tx", "rx";
+			clocks = <&cpg CPG_MOD 70>;
+			power-domains = <&cpg>;
+			status = "disabled";
+			audio_clk = <0>;	/* Assign in DTS */
 		};
 	};
 };
