--- a/arch/arm/configs/rza2mevb_xip_defconfig
+++ b/arch/arm/configs/rza2mevb_xip_defconfig
@@ -132,6 +132,15 @@ CONFIG_FB_VDC5=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 CONFIG_LOGO=y
+CONFIG_SOUND=y
+CONFIG_SND=y
+CONFIG_SND_OSSEMUL=y
+CONFIG_SND_MIXER_OSS=y
+CONFIG_SND_PCM_OSS=y
+CONFIG_SND_SOC=y
+CONFIG_SND_SOC_RZA=y
+CONFIG_SND_SOC_RZA_SSI=y
+CONFIG_SND_SOC_WM8978_SPI=y
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_EHCI_HCD=y
