--- a/arch/arm/boot/dts/r7s9210.dtsi
+++ b/arch/arm/boot/dts/r7s9210.dtsi
@@ -622,5 +622,32 @@
 
 			status = "disabled";
 		};
+
+		rtc0: rtc@fcffd000 {
+			compatible = "renesas,rza2m-rtc";
+			reg = <0xfcffd000 0x2e>;
+			interrupts = <GIC_SPI (359-32) IRQ_TYPE_EDGE_RISING
+					  GIC_SPI (360-32) IRQ_TYPE_EDGE_RISING
+					  GIC_SPI (361-32) IRQ_TYPE_EDGE_RISING>;
+			interrupt-names = "alarm", "period", "carry";
+			clocks = <&cpg CPG_MOD 53>;
+			clock-names = "fck";
+			power-domains = <&cpg>;
+			status = "disabled";
+		};
+
+		rtc1: rtc@fcff1000 {
+			compatible = "renesas,rza2m-rtc";
+			reg = <0xfcff1000 0x2e>;
+			interrupts = <GIC_SPI (362-32) IRQ_TYPE_EDGE_RISING
+					  GIC_SPI (363-32) IRQ_TYPE_EDGE_RISING
+					  GIC_SPI (364-32) IRQ_TYPE_EDGE_RISING>;
+			interrupt-names = "alarm", "period", "carry";
+			clocks = <&cpg CPG_MOD 52>;
+			clock-names = "fck";
+			power-domains = <&cpg>;
+			status = "disabled";
+		};
+
 	};
 };
