--- a/arch/arm/boot/dts/r7s72100-streamit.dts
+++ b/arch/arm/boot/dts/r7s72100-streamit.dts
@@ -394,7 +394,8 @@
 
 		pinctrl-names = "default";
 		pinctrl-0 = <&irq3_pins>;
-		interrupts = <GIC_SPI (35-32) IRQ_TYPE_LEVEL_LOW>; /* IRQ3 */
+		interrupt-parent = <&irqc>;
+		interrupts = <3 IRQ_TYPE_LEVEL_LOW>; /* IRQ3 */
 
 		touchscreen-size-x = <480>;
 		touchscreen-size-y = <272>;
